<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.oguzdev.trendinghacker.ui.SetupActivity$PlaceholderFragment">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_setup_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">
            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_text"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/card_padding"
                android:layout_marginStart="@dimen/card_padding"
                android:layout_marginEnd="@dimen/card_padding"
                android:textSize="16sp" />
            <Button android:id="@+id/button_service_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                tools:text="enable"
                style="?android:attr/borderlessButtonStyle" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_setup_instapaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        card_view:cardCornerRadius="@dimen/card_corner_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">
            <TextView
                android:id="@+id/read_later_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/card_padding"
                android:layout_marginStart="@dimen/card_padding"
                android:layout_marginEnd="@dimen/card_padding"
                style="?android:attr/textAppearanceMedium"
                android:text="@string/instapaper_settings_headline" />

            <EditText
                android:id="@+id/read_later_username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/read_later_headline"
                android:hint="@string/instapaper_username_hint"
                android:layout_marginTop="@dimen/card_padding"
                android:layout_marginStart="@dimen/card_padding"
                android:layout_marginEnd="@dimen/card_padding" />

            <EditText
                android:id="@+id/read_later_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/read_later_username_input"
                android:hint="@string/instapaper_password_hint"
                android:layout_marginTop="@dimen/card_padding"
                android:layout_marginStart="@dimen/card_padding"
                android:layout_marginEnd="@dimen/card_padding"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/read_later_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/read_later_login_button" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
